# MAVSDK

./: .gitmodules  SIRALAB.md
examples/: CMakeLists.txt
examples/gimbal_manager_server/: CMakeLists.txt  gimbal_manager_client.cpp  gimbal_manager_server.cpp
examples/remote_id/: CMakeLists.txt  remote_id.cpp
src/: plugins.txt
src/mavsdk/core/: system_impl.cpp  system_impl.h
src/mavsdk/plugins/camera/: camera_definition.cpp  camera_impl.cpp  camera_impl.h
src/mavsdk/plugins/gimbal_manager_server/: CMakeLists.txt  gimbal_manager_server.cpp  gimbal_manager_server_impl.cpp  gimbal_manager_server_impl.h
src/mavsdk/plugins/gimbal_manager_server/include/plugins/gimbal_manager_server/: gimbal_manager_server.h
src/mavsdk/plugins/remote_id/: remote_id.cpp  remote_id_impl.cpp  remote_id_impl.h
src/mavsdk/plugins/remote_id/include/plugins/remote_id/: remote_id.h
src/mavsdk_server/src/: grpc_server.cpp  grpc_server.h
src/mavsdk_server/src/plugins/gimbal_manager_server/: gimbal_manager_server_service_impl.h
src/mavsdk_server/src/plugins/remote_id/: remote_id_service_impl.h
